--- a/index.html
+++ b/index.html
@@ -33,27 +33,32 @@
         </nav>
         </header>
 
-        <!-- hero/jumbotron -->
-        <section>
-
-        </section>
-
         <!-- hero section -->
-        <section>
-            <div>
-                <h3>Get Started Today</h3>
+        <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
+                    messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund
+                    Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche
+                    tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you
+                    probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+                </p>
+            </div>
+            <div class="hero-form">
+                <h3 class="get-started">Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consultation.</p>
                 <!-- Add form element -->
                 <form>
                     <label for="name">Enter full name:</label>
-                    <input type="text" placeholder="Your name" name="name" id="name" />
+                    <input type="text" placeholder="Your name" name="name" id="name" class="form-input" />
                     <label for="email">Enter email address:</label>
-                    <input type="email" placeholder="Email Address" name="email" id="email" />
+                    <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
                     <label for="phone">Enter a telephone number:</label>
-                    <input type="tel" placeholder="Phone number" name="phone" id="phone" />
+                    <input type="tel" placeholder="Phone number" name="phone" id="phone" class="form-input" />
                     <p>
                         Have you worked out with a trainer before?
-                        <input type="radio:" name="trainer-confirm" id="trainer-yes" />
+                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
                         <label for="trainer-yes">Yes</label>
                         <input type="radio" name="trainer-confirm" id="trainer-no" />
                         <label for="trainer-no">No</label>
@@ -68,28 +73,119 @@
                         Get running!
                     </button>
                 </form>
-            </div>
-        </section>
+            </div class="hero-form">
+        </section class="hero">
         <!-- end hero -->
 
         <!-- "what we do" section -->
-        <section>
-            <h2>What We Do</h2>
+        <section id="what we do" class="intro">
+            <h2 class="section-title primary-border">What We Do</h2>
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
         </section>
 
         <!-- "what you do" section -->
-        <section>
-            <h2>What You Do</h2>
+        <section id="what you do" class="steps">
+            <h2 class="section-title primary-border">What You Do</h2>
+            <div>
+                <!-- insert this img element -->
+                <img src="./assets/images/step-1.svg" alt="" />
+                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+                <p>You're already here, so why not?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-2.svg" alt="" />
+                <h3 class="section-title primary-border">Step 2: <span>Consult with One of Our Trainers.</span></h3>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-3.svg" alt="" />
+                <h3 class="section-title primary-border">Step 3: <span>Get Running.</span></h3>
+                <p>Hit the ground running(literally) once your trainer lays out your plan.</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-4.svg" alt="" />
+                <h3>Step 4: <span>See Results.</span></h3>
+                <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+            </div>
+
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+
+        <!-- "first trainer bio" --> 
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+            </article>
+
+        <!-- "second trainer bio" -->
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout." />
+        </article>
+
+        <!-- "third trainer bio" -->
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                </p>
+            </div>
+        </article>
         </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach out" class="contact">
+            <div class="contact-info">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.610022184521!2d-111.88870428470786!3d40.50600587935491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287340bc80ae9%3A0x241f88316b072436!2s13500%20Lone%20Point%20Ln%2C%20Draper%2C%20UT%2084020!5e0!3m2!1sen!2sus!4v1596654489856!5m2!1sen!2sus" 
+                frameborder="0"
+                height="400"
+                width="400"
+                style="border:0"
+                allowfullscreen
+                >
+            
+            </iframe>"
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br/>
+                Some Town, CA <br/>
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
         </section>
 
     <!-- footer --> 
