--- a/index.html
+++ b/index.html
@@ -77,47 +77,88 @@
         </section class="hero">
         <!-- end hero -->
 
+        <!-- Wrap every h2 with a class of "section-title" in this div! -->
         <!-- "what we do" section -->
         <section id="what we do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
+            <div class="flex-row">
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
+            </div>
+            <div class="flex-row">
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
+            </div>
         </section>
 
         <!-- "what you do" section -->
         <section id="what you do" class="steps">
-            <h2 class="section-title primary-border">What You Do</h2>
-            <div>
+            <div class="flex-row:">
+            <h2 class="section-title primary-border">
+                What You Do
+            </h2>
+            
                 <!-- insert this img element -->
-                <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+                
+                <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                    <img src="./assets/images/step-1.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill out The Form Above</h4>
                 <p>You're already here, so why not?</p>
             </div>
 
-            <div>
-                <img src="./assets/images/step-2.svg" alt="" />
-                <h3 class="section-title primary-border">Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3>Step 2.</h3>
+                <div class="step-infor">
+                    <div class="step-img">
+                        <img src="./assets/images/step-2.svg" alt="" />
+                    </div>
+                <div class="step-text">
+                    <h4>Consult With One of Our Trainers.</h4>
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/images/step-3.svg" alt="" />
-                <h3 class="section-title primary-border">Step 3: <span>Get Running.</span></h3>
+            <div class="step">
+                <h3>Step 3.</h3>
+                <div class="step-img">
+                    <img src="./assets/images/step-3.svg" alt="" />
+                </div>
+            <div class="step-text">
+                <h4>Get Running.</h4>
                 <p>Hit the ground running(literally) once your trainer lays out your plan.</p>
             </div>
+            </div>
+        </div>
 
-            <div>
-                <img src="./assets/images/step-4.svg" alt="" />
-                <h3>Step 4: <span>See Results.</span></h3>
+            <div class="step">
+                <h3>Step 4.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-4.svg" alt="" />
+                    </div>
+                <div class="step-text">
+                    <h4>See Results.</h4>
                 <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+            </div>
+            </div>
             </div>
 
         </section>
 
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <div class="flex-row">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+            </div>
 
         <!-- "first trainer bio" --> 
             <article class="trainer">
@@ -162,7 +203,9 @@
         <!-- "reach out" section -->
         <section id="reach out" class="contact">
             <div class="contact-info">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <h2 class="section-title secondary-border">
+                Reach Out
+            </h2>
                 <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.610022184521!2d-111.88870428470786!3d40.50600587935491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287340bc80ae9%3A0x241f88316b072436!2s13500%20Lone%20Point%20Ln%2C%20Draper%2C%20UT%2084020!5e0!3m2!1sen!2sus!4v1596654489856!5m2!1sen!2sus" 
                 frameborder="0"
