add flexbox style to CSS

--- a/index.html
+++ b/index.html
@@ -205,11 +205,38 @@
         </section>
 
         <!-- "reach out" section -->
-        <section id="reach out" class="contact">
-            <div class="contact-info">
-            <h2 class="section-title secondary-border">
-                Reach Out
-            </h2>
+
+<div class="contact-info">
+    <div>
+        <h3>Run Buddy</h3>
+        <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+        </p>
+
+        <address>
+            55 Main Street <br />
+            Some Town, CA <br />
+            12345 <br />
+            P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br />
+            E: <a href="mailto://info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+
+    </div>
+
+    <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form>
+        <label for="contact-name">Your Name</label>
+        <input type="text" id="contact-name" placeholder="Your Name" />
+
+        <label for="contact-message">Message</label>
+        <textarea id="contact-message" placeholder="Message"></textarea>
+
+        <button type="submit">Submit</button>
+        </form>
+    </div>
                 <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.610022184521!2d-111.88870428470786!3d40.50600587935491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875287340bc80ae9%3A0x241f88316b072436!2s13500%20Lone%20Point%20Ln%2C%20Draper%2C%20UT%2084020!5e0!3m2!1sen!2sus!4v1596654489856!5m2!1sen!2sus" 
                 frameborder="0"
@@ -220,32 +247,8 @@
                 >
             
             </iframe>"
-            <div class="contact-form">
-                <h3>Contact Us</h3>
-                <form>
-                <label for="contact-name">Your Name</label>
-                <input type="text" id="contact-name" placeholder="Your Name" />
-
-                <label for="contact-message">Message</label>
-                <textarea id="contact-message" placeholder="Message"></textarea>
-
-                <button type="submit">Submit</button>
-                </form>
-            </div>
-            <h3>Run Buddy</h3>
-            <p>
-                Any questions or concerns before signing up?
-                <br />
-                Let us know and we'll be happy to talk to you!
-            </p>
-            <address>
-                55 Main Street <br/>
-                Some Town, CA <br/>
-                P: 555.RUN.BUDZ (555.786.2839)<br/>
-                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-            </address>
+            
         </div>
-        </section>
 
     <!-- footer --> 
     <footer>
