--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li>
                     <a href="#reach-out">Reach Out</a>
                 </li>
+                <a href="#service-plans">Service Plans</a>
             </ul>
         </nav>
         </header>
@@ -206,7 +207,18 @@
         </section>
 
         <!-- "reach out" section -->
+<section id="service-plans" class="services">
+    <div class="service-grid-container">
+        <div class="service-grid-item">One</div>
+        <div class="service-grid-item">Two</div>
+        <div class="service-grid-item">Three</div>
+        <div class="service-grid-item">Four</div>
+        <div class="service-grid-item">Five</div>
+        <div class="service-grid-item">Six</div>
+    </div>
+</section>
 
+<section id="reach-out" class="contact">
 <div class="contact-info">
     <div>
         <h3>Run Buddy</h3>
@@ -250,6 +262,8 @@
             </iframe>"
             
         </div>
+
+    </section>
 
     <!-- footer --> 
     <footer>
